--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,55 +3,36 @@ version: "3"
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
     networks:
       - broker-kafka
-    environment:
-      - ZOOKEEPER_CLIENT_PORT=2181
-      - ZOOKEEPER_TICK_TIME=2000
 
   kafka:
     image: confluentinc/cp-kafka:latest
-    networks:
-      - broker-kafka
     depends_on:
       - zookeeper
     ports:
       - 9092:9092
-    environment:
-      # - WAIT_HOSTS=zookeeper:2181
-      # - WAIT_HOSTS_TIMEOUT=300
-      # - WAIT_SLEEP_INTERVAL=30
-      # - WAIT_HOST_CONNECT_TIMEOUT=30
-      - KAFKA_BROKER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
-      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-
-  kafdrop:
-    image: obsidiandynamics/kafdrop:latest
     networks:
       - broker-kafka
-    depends_on:
-      - kafka
-    ports:
-      - 19000:9000
     environment:
-      KAFKA_BROKERCONNECT: kafka:29092
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   paymentsapi:
     container_name: paymentsapi
     build: ./PaymentsAPI
     restart: on-failure
     depends_on:
-      - kafdrop
       - kafka
-      - zookeeper
     links:
-      - kafdrop
       - kafka
-      - zookeeper
     networks:
       - broker-kafka
     ports:
@@ -61,13 +42,9 @@ services:
     build: ./WebhooksProcessor
     restart: on-failure
     depends_on:
-      - kafdrop
       - kafka
-      - zookeeper
     links:
-      - kafdrop
       - kafka
-      - zookeeper
     networks:
       - broker-kafka
     ports:
