--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,31 +24,32 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CREATE_TOPICS: "EXEMPLO_TOPICO:1:1"
 
-      #  paymentsapi:
-      #    container_name: paymentsapi
-      #    build: ./PaymentsAPI
-      #    restart: on-failure
-      #    depends_on:
-      # - kafka
-      #    links:
-      #- kafka
-      #    networks:
-      # - broker-kafka
-      #    ports:
-      #- 8080:8080
-      #  webhooksprocessor:
-      #    container_name: webhooksprocessor
-      #    build: ./WebhooksProcessor
-      #    restart: on-failure
-      #    depends_on:
-      #      - kafka
-      #    links:
-      #      - kafka
-      #    networks:
-      # - broker-kafka
-      #    ports:
-      # - 8081:8081
+    paymentsapi:
+      container_name: paymentsapi
+      build: ./PaymentsAPI
+      restart: on-failure
+      depends_on:
+        - kafka
+      links:
+        - kafka
+      networks:
+        - broker-kafka
+      ports:
+        - 8080:8080
+    webhooksprocessor:
+      container_name: webhooksprocessor
+      build: ./WebhooksProcessor
+      restart: on-failure
+      depends_on:
+        - kafka
+      links:
+        - kafka
+      networks:
+        - broker-kafka
+      ports:
+        - 8081:8081
 
 networks:
   broker-kafka:
