--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,30 +26,30 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_CREATE_TOPICS: "EXEMPLO_TOPICO:1:1"
 
-    paymentsapi:
-      container_name: paymentsapi
-      build: ./PaymentsAPI
-      restart: on-failure
-      depends_on:
-        - kafka
-      links:
-        - kafka
-      networks:
-        - broker-kafka
-      ports:
-        - 8080:8080
-    webhooksprocessor:
-      container_name: webhooksprocessor
-      build: ./WebhooksProcessor
-      restart: on-failure
-      depends_on:
-        - kafka
-      links:
-        - kafka
-      networks:
-        - broker-kafka
-      ports:
-        - 8081:8081
+    # paymentsapi:
+    #   container_name: paymentsapi
+    #   build: ./PaymentsAPI
+    #   restart: on-failure
+    #   depends_on:
+    #     - kafka
+    #   links:
+    #     - kafka
+    #   networks:
+    #     - broker-kafka
+    #   ports:
+    #     - 8080:8080
+    # webhooksprocessor:
+    #   container_name: webhooksprocessor
+    #   build: ./WebhooksProcessor
+    #   restart: on-failure
+    #   depends_on:
+    #     - kafka
+    #   links:
+    #     - kafka
+    #   networks:
+    #     - broker-kafka
+    #   ports:
+    #     - 8081:8081
 
 networks:
   broker-kafka:
