--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: on-failure
     ports:
       - 8080:8080
+    labels:
+      kompose.service.type: LoadBalancer
 
   webhooksprocessor:
     container_name: webhooksprocessor
