--- a/paymentsapi-service.yaml
+++ b/paymentsapi-service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   annotations:
     kompose.cmd: kompose convert
+    kompose.service.type: LoadBalancer
     kompose.version: 1.22.0 (955b78124)
   creationTimestamp: null
   labels:
@@ -10,12 +11,11 @@ metadata:
   name: paymentsapi
 spec:
   ports:
-    - name: "8081"
-      port: 8081
-      targetPort: 8081
+    - name: "8080"
+      port: 8080
+      targetPort: 8080
   selector:
     io.kompose.service: paymentsapi
-  externalIPs:
-    - 192.168.0.10
+  type: LoadBalancer
 status:
   loadBalancer: {}
